# NovelGenerator

./: .codecov.yml  .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  generate_project.py  main.py  main_back.py  main_enhanced.py  main_novel_generator.py  nginx.conf  pyproject.toml  quick_start.py  requirements-dev.txt  requirements.txt
config/: config_manager.py  diversity_settings.yaml  generation_config.py  logger.py  novel.yaml  security_config.py  settings.py
config/prompts/: character.yaml  plot.yaml  tools.yaml  worldbuilding.yaml  writing.yaml
core/: abstract_tools.py  base_tools.py  cache_manager.py  llm_client.py  mcp_server.py  tool_registry.py
data/: models.py
examples/: api_client_example.py  basic_usage.py  custom_tool_example.py  simple_usage.py  workflow_example.py
modules/: __init__.py  save_story.py  save_txt.py
modules/analysis/: __init__.py  consistency_checker.py  quality_analyzer.py  tools.py
modules/character/: __init__.py  character_creator.py  character_creator_tool.py  development.py  enhanced_character_creator.py  improved_character_naming.py  relationship.py  tools.py
modules/generation/: diversity_enhancer.py  enhanced_story_generator.py  readme.md  tools.py
modules/plot/: __init__.py  arc_manager.py  conflict_generator.py  story_planner.py  tools.py
modules/tools/: __init__.py  consistency_checker.py  name_generator.py  timeline_manager.py
modules/worldbuilding/: __init__.py  geography.py  magic_system.py  world_generator.py
modules/writing/: __init__.py  chapter_writer.py  description_writer.py  dialogue_writer.py  scene_generator.py  tools.py
scripts/: CHANGELOG.md  backup.sh  cleanup.py  deploy.sh  dev-setup.sh  health_check.py  migrate.py  performance_test.py  restore.sh
tests/: conftest.py  run_tests.py  test_basic.py  test_character.py  test_config_integration.py  test_core.py  test_diversity_demo.py  test_integration.py  test_plot.py  test_tools.py  test_worldbuilding.py  test_writing.py
utils/: code_cleanup.py  monitoring.py  performance.py  security.py
